--- a/front-src/style.css
+++ b/front-src/style.css
@@ -3,9 +3,11 @@
 }
 body {
   margin: 0;
-  background-image: url("https://media.istockphoto.com/photos/top-view-of-brown-biscuit-bones-and-crunchy-organic-kibble-pieces-for-picture-id1252751102?k=20&m=1252751102&s=612x612&w=0&h=fdL440FEKHEo--pOsYRIdQvXxVFPFjYxjiWXbBNVvrs=");
 }
 
 .asd{
-  background-size:contain;
+ 
+}
+@media (min-width:678px){
+  
 }
